feat: add dto user
