# application/inbound-controller-rest/src/main/java/sk/fsa/rental/security/JwtConverter.java
@@ -4,6 +4,8 @@ import org.springframework.security.authentication.AbstractAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
+import sk.fsa.rental.rest.dto.UserDto;
+import sk.fsa.rental.rest.dto.UserRoleDto;
 
 import java.util.*;
 
@@ -24,7 +26,28 @@ class JwtConverter extends AbstractAuthenticationToken {
 
     @Override
     public Object getPrincipal() {
-        return source.getClaimAsString("email");
+        UserDto userDto = new UserDto();
+        userDto.setEmail(source.getClaimAsString("email"));
+        userDto.setName(source.getClaimAsString("given_name"));
+        userDto.setRole(getRole());
+        return userDto;
+    }
+
+    private UserRoleDto getRole() {
+        Map<String, Object> realmAccess = source.getClaimAsMap("realm_access");
+        if (realmAccess == null || realmAccess.get("roles") == null) return null;
+
+        @SuppressWarnings("unchecked")
+        List<String> roles = (List<String>) realmAccess.get("roles");
+        return findRole(roles).orElse(null);
+    }
+
+    private Optional<UserRoleDto> findRole(List<String> roles) {
+        return roles.stream()
+                .filter(role -> Arrays.stream(UserRoleDto.values())
+                        .anyMatch(enumRole -> enumRole.name().equals(role)))
+                .map(UserRoleDto::fromValue)
+                .findFirst();
     }
 
     private static Collection<? extends GrantedAuthority> toAuthorities(Jwt source) {
